Fix Scrollbar #1

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
     --heading-font: "Sen", serif;
     --primary-font: "Poppins", serif;
     --primary-color: #171100;
-    --secondary-color: #ffb900;
+    --secondary-color: rgb(255, 185, 0);
     --desc-color: #5f5b53;
 }
 
@@ -22,6 +22,23 @@ body {
 html,
 body {
     scroll-behavior: smooth;
+    overflow: overlay;
+}
+::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(225, 185, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(225, 185, 0, 1);
+}
+::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 /*===== Common =====*/
